--- a/client/web/divkit/tests/hermione/static/index.html
+++ b/client/web/divkit/tests/hermione/static/index.html
@@ -70,6 +70,13 @@
             src: url(//yastatic.net/s3/home/fonts/ys/4/text-cond-bold.woff2) format('woff2');
         }
 
+        @font-face {
+            font-family: 'YS Text Variable';
+            font-style: normal;
+            font-stretch: normal;
+            src: url(//yastatic.net/s3/home/fonts/ys/4/text-variable-weight.woff2) format('woff2-variations');
+        }
+
         body {
             font-family: 'YS Text', 'Helvetica Neue', Arial, sans-serif;
             -webkit-font-feature-settings: 'liga', 'kern';
